objects/sf4twitter__Twitter_Account__c.object
<CustomObject>
    <fields>
        <fullName>sf4twitter__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Bit_ly_Password__c</fullName>
        <label>Bit.ly Api Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Bit_ly_Username__c</fullName>
        <label>Bit.ly Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Contributor_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contributor Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Direct_Message_Id_Threshold__c</fullName>
        <formula>TEXT(MAX(1, VALUE(BLANKVALUE(sf4twitter__Twitter_Max_Message__c, &apos;1&apos;) ) - VALUE( BLANKVALUE(sf4twitter__Search_Direct_Message_Id_Offset__c, &apos;500&apos;))))</formula>
        <label>Direct Message Id Threshold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Enable_Auto_Case_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Auto-Case Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Has_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Password</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Number__c</fullName>
        <label>Klout Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Score__c</fullName>
        <formula>IF( ABS( sf4twitter__Klout_Number__c )  &gt; 0, TEXT( sf4twitter__Klout_Number__c ) + &apos;  &apos; + IMAGE($Setup.sf4twitter__Twitter_Public_Configuration__c.sf4twitter__Klout_Score_logo__c,&apos;Klout&apos;,17,90), &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Klout Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Last_DM_Ids__c</fullName>
        <label>Last DM Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Last_Tweet_Ids__c</fullName>
        <label>Last Tweet Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf4twitter__OAuth_Secret__c</fullName>
        <description>Authentication Secret for OAUTH</description>
        <label>OAuth Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__OAuth_Token__c</fullName>
        <description>Authentication Token for OAUTH</description>
        <label>OAuth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Partial_Twitter_Max_Message__c</fullName>
        <label>Partial Twitter Max Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Partial_Twitter_Max_Twitter__c</fullName>
        <label>Partial Twitter Max Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Password__c</fullName>
        <defaultValue>$Label.sf4twitter__TWITTER_PASSWORDS_DEPRECATED</defaultValue>
        <inlineHelpText>Twitter is deprecating Username/Password in favor of OAuth, a secure access protocol. To use OAuth, enter any text in this field, then click the “Grant Twitter Access” button after saving the Twitter Account.</inlineHelpText>
        <label>Password</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Post_Hashtag_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If I add &quot;#ch&quot; to a Tweet, the Tweet should automatically be posted to my Chatter feed.</description>
        <inlineHelpText>When this feature is enabled, any Tweets by this Twitter Account containing #ch will be automatically posted to the feed of the Twitter Account Creator. Comments on this post in Chatter will not be sent to Twitter.</inlineHelpText>
        <label>Add Posts with #ch to Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Results_Per_Page__c</fullName>
        <defaultValue>99</defaultValue>
        <description>This is an admin setting to change the number of tweets returned per page. Refer to the documentation on how to use this setting.</description>
        <label>Results Per Page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Search_Direct_Message_Id_Offset__c</fullName>
        <label>Search Direct Message Id Offset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Search_Tweet_Id_Offset__c</fullName>
        <label>Search Tweet Id Offset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Tweet_Id_Threshold__c</fullName>
        <formula>TEXT(MAX(1, VALUE( BLANKVALUE(sf4twitter__Twitter_Max_Twitter__c, &apos;1&apos;) ) - VALUE( BLANKVALUE(sf4twitter__Search_Tweet_Id_Offset__c, &apos;5000&apos;))))</formula>
        <label>Tweet Id Threshold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Max_Message__c</fullName>
        <label>Twitter Max Message</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Max_Twitter__c</fullName>
        <label>Twitter Max Twitter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_User_Id__c</fullName>
        <label>Twitter User Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Unknown_Twitter_Usernames__c</fullName>
        <label>Unknown Twitter Usernames</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do nothing</fullName>
                    <default>true</default>
                    <label>Do nothing</label>
                </value>
                <value>
                    <fullName>Create Contact</fullName>
                </value>
                <value>
                    <fullName>Create Lead</fullName>
                </value>
                <value>
                    <fullName>Create Person Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf4twitter__Username__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Username</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf4twitter__Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True when Account has been Validated and acces granted to the App.</description>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__associate_DM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Case Association Logic to Tweets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__associate_cases_same_username__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will prevent Tweets from being automatically associated to cases that are not originated by the Tweet&apos;s Author</inlineHelpText>
        <label>Only Associate Matching Usernames</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__closed_case_duration__c</fullName>
        <inlineHelpText>Whenever a Candidate Case is looked for (for Direct Messages or Replies) all Closed cases with a Closed Date less than the set amount of minutes will be available to the Threading Logic.</inlineHelpText>
        <label>Time to Keep Assoc. After Case Close</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__ignore_maxid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When searching for tweets previous results are filtered out from the new results, by turning this option &apos;On&apos; the search will bring all results up to the maximum allowed by twitter.</inlineHelpText>
        <label>Get Max Tweets Incl. Previous Results</label>
        <type>Checkbox</type>
    </fields>
    <label>Twitter Account</label>
    <listViews>
        <fullName>sf4twitter__All</fullName>
        <columns>NAME</columns>
        <columns>sf4twitter__Username__c</columns>
        <columns>sf4twitter__Unknown_Twitter_Usernames__c</columns>
        <columns>sf4twitter__Enable_Auto_Case_Creation__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>sf4twitter__Valid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>sf4twitter__My_Twitter_Accounts</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>sf4twitter__Username__c</columns>
        <columns>sf4twitter__Bit_ly_Username__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Twitter Accounts</label>
    </listViews>
    <nameField>
        <label>Twitter Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Twitter Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sf4twitter__Save_unknown_twitter_usernames_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(sf4twitter__Unknown_Twitter_Usernames__c, &quot;&quot; ) 
)</errorConditionFormula>
        <errorDisplayField>sf4twitter__Unknown_Twitter_Usernames__c</errorDisplayField>
        <errorMessage>This field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf4twitter__Search_DM_Id_Offset_must_be_a_number</fullName>
        <active>true</active>
        <description>The value entered into the Search Direct Message Id Offset field must be a number</description>
        <errorConditionFormula>AND(
  NOT(ISBLANK( sf4twitter__Search_Direct_Message_Id_Offset__c )),
  NOT(ISNUMBER( sf4twitter__Search_Direct_Message_Id_Offset__c ))
)</errorConditionFormula>
        <errorDisplayField>sf4twitter__Search_Direct_Message_Id_Offset__c</errorDisplayField>
        <errorMessage>Invalid number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf4twitter__Search_Tweet_Id_Offset_must_be_a_number</fullName>
        <active>true</active>
        <description>The value entered into the Search Tweet Id Offset field must be a number</description>
        <errorConditionFormula>AND(
  NOT(ISBLANK( sf4twitter__Search_Tweet_Id_Offset__c )),
  NOT(ISNUMBER( sf4twitter__Search_Tweet_Id_Offset__c ))
)</errorConditionFormula>
        <errorDisplayField>sf4twitter__Search_Tweet_Id_Offset__c</errorDisplayField>
        <errorMessage>Invalid number</errorMessage>
    </validationRules>
</CustomObject>